--- a/Project3/Project3.vcxproj
+++ b/Project3/Project3.vcxproj
@@ -68,6 +68,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameSystem.cpp" />
     <ClCompile Include="InteractionLevel.cpp" />
+    <ClCompile Include="Items.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Shop.cpp" />
@@ -76,6 +77,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameSystem.h" />
     <ClInclude Include="InteractionLevel.h" />
+    <ClInclude Include="Items.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Shop.h" />
   </ItemGroup>
